maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: not found: value indic
  indic(x,y,0)
  ^